syntax = "proto3";

package com.vendsy.testlab;

option java_multiple_files = true;

// Represents report files.
message ReportFiles {
  bytes reportFile = 1;  // The binary content of the report file.
  string fileName = 2;  // The name of the report file.
}

// Request for pulling report files.
message ReportsRequest {
  string ciUniqueBuildNumber = 1;  // The unique build number from the CI system.
}
