package dev.oianmol.dev.oianmol.opentestlab.android.reporting

import com.google.protobuf.ByteString
import dev.oianmol.opentestlab.ReportFiles
import dev.oianmol.opentestlab.ReportManagementServiceGrpcKt
import dev.oianmol.opentestlab.ReportsRequest
import dev.oianmol.opentestlab.android.testexec.TestExecScope
import kotlinx.coroutines.CoroutineDispatcher
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.flow.flow
import kotlinx.coroutines.flow.flowOn

class DeviceFarmReportManagementService(
    private val testExecScope: TestExecScope,
    dispatcher: CoroutineDispatcher = Dispatchers.IO
) : ReportManagementServiceGrpcKt.ReportManagementServiceCoroutineImplBase(dispatcher) {
    override fun pullReportFiles(request: ReportsRequest) = flow<ReportFiles> {
        for (it in testExecScope.workingReportsDir(request).listFiles() ?: emptyArray()) {
            val stream = it.inputStream()
            var size = it.length()
            while (size != 0L) {
                val read = ByteArray(Math.min(size, 4086L).toInt())
                val readBytes = stream.read(read)
                size -= readBytes
                emit(
                    ReportFiles.newBuilder()
                        .setFileName(it.name)
                        .setReportFile(ByteString.copyFrom(read))
                        .build()
                )

            }
            stream.close()
        }
    }
        .flowOn(Dispatchers.IO)
}